--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss"; 
+@import "tailwindcss";
 
 /* colors */
 :root {
@@ -45,10 +45,11 @@
   --accent-teal-blue: #008080;
   --accent-mint: #3eb489;
   --accent-olive: #808000;
-  --font-nunito: 'Nunito', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --font-inter:
+    "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
 }
-@theme inline{
+@theme inline {
   --color-background: #090b0c;
   --color-foreground: #808080;
   --color-primary-foreground: #f7f8f8;
@@ -92,14 +93,15 @@
   --color-accent-teal-blue: #008080;
   --color-accent-mint: #3eb489;
   --color-accent-olive: #808000;
-  --font-nunito: 'Nunito', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --font-inter:
+    "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
 }
- 
+
 body {
   background: var(--background);
   color: var(--tertiary-text);
-  font-family: var(--font-nunito);
+  font-family: var(--font-inter);
 }
 
 button {
@@ -126,25 +128,63 @@ button {
 }
 
 .three-d {
-  transform:translateX(2%) scale(1.2) rotateX(47deg) rotateY(31deg) rotate(324deg)
-    ; 
-
-  transform-origin:20% 10% ;
+  transform: translateX(2%) scale(1.2) rotateX(47deg) rotateY(31deg)
+    rotate(324deg);
+  transform-origin: 20% 0%;
   overflow: hidden;
-
 }
 
+@media screen and (max-width: 1024px) {
+  .three-d {
+    transform: translateX(25%) translateY(12%) scale(1.2) rotateX(47deg) rotateY(31deg)
+      rotate(324deg);
+    /* transform-origin: 60% -50%; */
+    overflow: hidden;
+  }
+}
 @media screen and (max-width: 768px) {
   .three-d {
-     transform:translateX(2%) scale(1.2) rotateX(47deg) rotateY(31deg) rotate(324deg)
-     ;
-  transform-origin:20% -110% ;
-  overflow: hidden;
+    transform: translateX(0%) translateY(12%) scale(1.2) rotateX(47deg) rotateY(31deg)
+      rotate(324deg);
+    /* transform-origin: 60% -50%; */
+    overflow: hidden;
   }
-  
+}
+@media screen and (max-width: 600px) {
+  .three-d {
+    transform: translateX(-2%) translateY(18%) scale(1.2) rotateX(47deg) rotateY(31deg)
+      rotate(324deg);
+    /* transform-origin: 60% -50%; */
+    overflow: hidden;
+  }
 }
 .three-d .mask {
   background: url(/image.png) top left no-repeat;
   background-size: cover;
   opacity: 0.3;
 }
+
+ 
+.heading-animation {
+  display: inline-block; 
+  transform: translateY(0%);
+  opacity: 0;
+  animation: headingScale 0.6s cubic-bezier(0.4, 0.8, 0.2, 1) forwards;
+  animation-delay: calc(var(--index) * 0.05);
+}
+
+@keyframes headingScale {
+  from {
+    z-index: 300;
+    transform: translateY(60%);
+    filter: blur(10px);
+    opacity: 0.5;
+  }
+  to {
+    z-index: 0;
+    transform: translateY(0%);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+ 
