feat : add footer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
   --foreground: #808080;
   --primary-foreground: #f7f8f8;
   --secondary-foreground: #808080;
-  --tertiary-foreground: #6c6d6e;
+  --tertiary-foreground: #8a8f98;
   --navbar-bg: #0a0a0acc;
   --navbar-border: #ffffff14;
   --primary: #5e6ad2;
